Asg5/yyparse.output
Terminals unused in grammar

   TOK_BLOCK
   TOK_CALL
   TOK_IFELSE
   TOK_INITDECL
   TOK_NEWARRAY
   TOK_TYPEID
   TOK_FIELD
   TOK_ROOT
   TOK_DECLID
   TOK_INDEX
   TOK_NEWSTRING
   TOK_RETURNVOID
   TOK_VARDECL
   TOK_FUNCTION
   TOK_PARAMLIST
   TOK_PROTOTYPE


State 137 conflicts: 27 reduce/reduce
State 139 conflicts: 27 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program structdef
    2        | program function
    3        | program statement
    4        | program error '}'
    5        | program error ';'
    6        | /* empty */

    7 structdef: declarations '}'

    8 fielddecl: basetype TOK_IDENT
    9          | basetype TOK_ARRAY TOK_IDENT

   10 declarations: TOK_STRUCT TOK_IDENT '{'
   11             | declarations fielddecl ';'

   12 basetype: TOK_VOID
   13         | TOK_BOOL
   14         | TOK_CHAR
   15         | TOK_INT
   16         | TOK_STRING
   17         | TOK_IDENT

   18 function: identdecl '(' ')' ';'
   19         | identdecl '(' ')' block
   20         | identdecl funcp ')' block
   21         | identdecl funcp ')' ';'

   22 funcp: '(' identdecl
   23      | funcp ',' identdecl

   24 identdecl: basetype TOK_ARRAY TOK_IDENT
   25          | basetype TOK_IDENT

   26 block: '{' '}'
   27      | blkstmts '}'
   28      | ';'

   29 blkstmts: '{' statement
   30         | blkstmts statement

   31 statement: block
   32          | vardecl
   33          | while
   34          | ifelse
   35          | return
   36          | expr ';'

   37 vardecl: identdecl '=' expr ';'

   38 while: TOK_WHILE '(' expr ')' statement

   39 ifelse: TOK_IF '(' expr ')' statement
   40       | TOK_IF '(' expr ')' statement TOK_ELSE statement

   41 return: TOK_RETURN expr ';'
   42       | TOK_RETURN ';'

   43 expr: constant
   44     | variable
   45     | '(' expr ')'
   46     | call
   47     | allocator
   48     | expr '=' expr
   49     | expr TOK_EQ expr
   50     | expr TOK_NE expr
   51     | expr TOK_LT expr
   52     | expr TOK_LE expr
   53     | expr TOK_GT expr
   54     | expr TOK_GE expr
   55     | expr '+' expr
   56     | expr '-' expr
   57     | expr '*' expr
   58     | expr '/' expr
   59     | expr '%' expr
   60     | TOK_ORD expr
   61     | TOK_CHR expr
   62     | '!' expr
   63     | '+' expr
   64     | '-' expr

   65 allocator: TOK_NEW TOK_IDENT '(' ')'
   66          | TOK_NEW TOK_STRING '(' expr ')'
   67          | TOK_NEW basetype '[' expr ']'

   68 call: TOK_IDENT '(' ')'
   69     | arg ')'

   70 arg: TOK_IDENT '(' expr
   71    | arg ',' expr

   72 variable: TOK_IDENT
   73         | expr '[' expr ']'
   74         | expr '.' TOK_IDENT

   75 constant: TOK_INTCON
   76         | TOK_CHARCON
   77         | TOK_STRINGCON
   78         | TOK_FALSE
   79         | TOK_TRUE
   80         | TOK_NULL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 62
'%' (37) 59
'(' (40) 18 19 22 38 39 40 45 65 66 68 70
')' (41) 18 19 20 21 38 39 40 45 65 66 68 69
'*' (42) 57
'+' (43) 55 63
',' (44) 23 71
'-' (45) 56 64
'.' (46) 74
'/' (47) 58
';' (59) 5 11 18 21 28 36 37 41 42
'=' (61) 37 48
'[' (91) 67 73
']' (93) 67 73
'{' (123) 10 26 29
'}' (125) 4 7 26 27
error (256) 4 5
TOK_VOID (258) 12
TOK_BOOL (259) 13
TOK_CHAR (260) 14
TOK_INT (261) 15
TOK_STRING (262) 16 66
TOK_IF (263) 39 40
TOK_ELSE (264) 40
TOK_WHILE (265) 38
TOK_RETURN (266) 41 42
TOK_STRUCT (267) 10
TOK_FALSE (268) 78
TOK_TRUE (269) 79
TOK_NULL (270) 80
TOK_NEW (271) 65 66 67
TOK_ARRAY (272) 9 24
TOK_EQ (273) 49
TOK_NE (274) 50
TOK_LT (275) 51
TOK_LE (276) 52
TOK_GT (277) 53
TOK_GE (278) 54
TOK_IDENT (279) 8 9 10 17 24 25 65 68 70 72 74
TOK_INTCON (280) 75
TOK_CHARCON (281) 76
TOK_STRINGCON (282) 77
TOK_BLOCK (283)
TOK_CALL (284)
TOK_IFELSE (285)
TOK_INITDECL (286)
TOK_POS (287)
TOK_NEG (288)
TOK_NEWARRAY (289)
TOK_TYPEID (290)
TOK_FIELD (291)
TOK_ORD (292) 60
TOK_CHR (293) 61
TOK_ROOT (294)
TOK_DECLID (295)
TOK_INDEX (296)
TOK_NEWSTRING (297)
TOK_RETURNVOID (298)
TOK_VARDECL (299)
TOK_FUNCTION (300)
TOK_PARAMLIST (301)
TOK_PROTOTYPE (302)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1 2 3 4 5 6, on right: 0 1 2 3 4 5
structdef (66)
    on left: 7, on right: 1
fielddecl (67)
    on left: 8 9, on right: 11
declarations (68)
    on left: 10 11, on right: 7 11
basetype (69)
    on left: 12 13 14 15 16 17, on right: 8 9 24 25 67
function (70)
    on left: 18 19 20 21, on right: 2
funcp (71)
    on left: 22 23, on right: 20 21 23
identdecl (72)
    on left: 24 25, on right: 18 19 20 21 22 23 37
block (73)
    on left: 26 27 28, on right: 19 20 31
blkstmts (74)
    on left: 29 30, on right: 27 30
statement (75)
    on left: 31 32 33 34 35 36, on right: 3 29 30 38 39 40
vardecl (76)
    on left: 37, on right: 32
while (77)
    on left: 38, on right: 33
ifelse (78)
    on left: 39 40, on right: 34
return (79)
    on left: 41 42, on right: 35
expr (80)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64, on right: 36 37 38 39 40 41 45 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 64 66 67 70 71 73 74
allocator (81)
    on left: 65 66 67, on right: 47
call (82)
    on left: 68 69, on right: 46
arg (83)
    on left: 70 71, on right: 69 71
variable (84)
    on left: 72 73 74, on right: 44
constant (85)
    on left: 75 76 77 78 79 80, on right: 43


State 0

    0 $accept: . program $end

    $default  reduce using rule 6 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    1 program: program . structdef
    2        | program . function
    3        | program . statement
    4        | program . error '}'
    5        | program . error ';'

    $end           shift, and go to state 2
    error          shift, and go to state 3
    TOK_VOID       shift, and go to state 4
    TOK_BOOL       shift, and go to state 5
    TOK_CHAR       shift, and go to state 6
    TOK_INT        shift, and go to state 7
    TOK_STRING     shift, and go to state 8
    TOK_IF         shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_STRUCT     shift, and go to state 12
    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26
    ';'            shift, and go to state 27
    '{'            shift, and go to state 28

    structdef     go to state 29
    declarations  go to state 30
    basetype      go to state 31
    function      go to state 32
    identdecl     go to state 33
    block         go to state 34
    blkstmts      go to state 35
    statement     go to state 36
    vardecl       go to state 37
    while         go to state 38
    ifelse        go to state 39
    return        go to state 40
    expr          go to state 41
    allocator     go to state 42
    call          go to state 43
    arg           go to state 44
    variable      go to state 45
    constant      go to state 46


State 2

    0 $accept: program $end .

    $default  accept


State 3

    4 program: program error . '}'
    5        | program error . ';'

    '}'  shift, and go to state 47
    ';'  shift, and go to state 48


State 4

   12 basetype: TOK_VOID .

    $default  reduce using rule 12 (basetype)


State 5

   13 basetype: TOK_BOOL .

    $default  reduce using rule 13 (basetype)


State 6

   14 basetype: TOK_CHAR .

    $default  reduce using rule 14 (basetype)


State 7

   15 basetype: TOK_INT .

    $default  reduce using rule 15 (basetype)


State 8

   16 basetype: TOK_STRING .

    $default  reduce using rule 16 (basetype)


State 9

   39 ifelse: TOK_IF . '(' expr ')' statement
   40       | TOK_IF . '(' expr ')' statement TOK_ELSE statement

    '('  shift, and go to state 49


State 10

   38 while: TOK_WHILE . '(' expr ')' statement

    '('  shift, and go to state 50


State 11

   41 return: TOK_RETURN . expr ';'
   42       | TOK_RETURN . ';'

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26
    ';'            shift, and go to state 52

    expr       go to state 53
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 12

   10 declarations: TOK_STRUCT . TOK_IDENT '{'

    TOK_IDENT  shift, and go to state 54


State 13

   78 constant: TOK_FALSE .

    $default  reduce using rule 78 (constant)


State 14

   79 constant: TOK_TRUE .

    $default  reduce using rule 79 (constant)


State 15

   80 constant: TOK_NULL .

    $default  reduce using rule 80 (constant)


State 16

   65 allocator: TOK_NEW . TOK_IDENT '(' ')'
   66          | TOK_NEW . TOK_STRING '(' expr ')'
   67          | TOK_NEW . basetype '[' expr ']'

    TOK_VOID    shift, and go to state 4
    TOK_BOOL    shift, and go to state 5
    TOK_CHAR    shift, and go to state 6
    TOK_INT     shift, and go to state 7
    TOK_STRING  shift, and go to state 55
    TOK_IDENT   shift, and go to state 56

    basetype  go to state 57


State 17

   17 basetype: TOK_IDENT .
   68 call: TOK_IDENT . '(' ')'
   70 arg: TOK_IDENT . '(' expr
   72 variable: TOK_IDENT .

    '('  shift, and go to state 58

    TOK_ARRAY  reduce using rule 17 (basetype)
    TOK_IDENT  reduce using rule 17 (basetype)
    $default   reduce using rule 72 (variable)


State 18

   75 constant: TOK_INTCON .

    $default  reduce using rule 75 (constant)


State 19

   76 constant: TOK_CHARCON .

    $default  reduce using rule 76 (constant)


State 20

   77 constant: TOK_STRINGCON .

    $default  reduce using rule 77 (constant)


State 21

   60 expr: TOK_ORD . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 59
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 22

   61 expr: TOK_CHR . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 60
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 23

   63 expr: '+' . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 61
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 24

   64 expr: '-' . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 62
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 25

   62 expr: '!' . expr

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 63
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 26

   45 expr: '(' . expr ')'

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 64
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 27

   28 block: ';' .

    $default  reduce using rule 28 (block)


State 28

   26 block: '{' . '}'
   29 blkstmts: '{' . statement

    TOK_VOID       shift, and go to state 4
    TOK_BOOL       shift, and go to state 5
    TOK_CHAR       shift, and go to state 6
    TOK_INT        shift, and go to state 7
    TOK_STRING     shift, and go to state 8
    TOK_IF         shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26
    '}'            shift, and go to state 65
    ';'            shift, and go to state 27
    '{'            shift, and go to state 28

    basetype   go to state 31
    identdecl  go to state 66
    block      go to state 34
    blkstmts   go to state 35
    statement  go to state 67
    vardecl    go to state 37
    while      go to state 38
    ifelse     go to state 39
    return     go to state 40
    expr       go to state 41
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 29

    1 program: program structdef .

    $default  reduce using rule 1 (program)


State 30

    7 structdef: declarations . '}'
   11 declarations: declarations . fielddecl ';'

    TOK_VOID    shift, and go to state 4
    TOK_BOOL    shift, and go to state 5
    TOK_CHAR    shift, and go to state 6
    TOK_INT     shift, and go to state 7
    TOK_STRING  shift, and go to state 8
    TOK_IDENT   shift, and go to state 68
    '}'         shift, and go to state 69

    fielddecl  go to state 70
    basetype   go to state 71


State 31

   24 identdecl: basetype . TOK_ARRAY TOK_IDENT
   25          | basetype . TOK_IDENT

    TOK_ARRAY  shift, and go to state 72
    TOK_IDENT  shift, and go to state 73


State 32

    2 program: program function .

    $default  reduce using rule 2 (program)


State 33

   18 function: identdecl . '(' ')' ';'
   19         | identdecl . '(' ')' block
   20         | identdecl . funcp ')' block
   21         | identdecl . funcp ')' ';'
   37 vardecl: identdecl . '=' expr ';'

    '='  shift, and go to state 74
    '('  shift, and go to state 75

    funcp  go to state 76


State 34

   31 statement: block .

    $default  reduce using rule 31 (statement)


State 35

   27 block: blkstmts . '}'
   30 blkstmts: blkstmts . statement

    TOK_VOID       shift, and go to state 4
    TOK_BOOL       shift, and go to state 5
    TOK_CHAR       shift, and go to state 6
    TOK_INT        shift, and go to state 7
    TOK_STRING     shift, and go to state 8
    TOK_IF         shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26
    '}'            shift, and go to state 77
    ';'            shift, and go to state 27
    '{'            shift, and go to state 28

    basetype   go to state 31
    identdecl  go to state 66
    block      go to state 34
    blkstmts   go to state 35
    statement  go to state 78
    vardecl    go to state 37
    while      go to state 38
    ifelse     go to state 39
    return     go to state 40
    expr       go to state 41
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 36

    3 program: program statement .

    $default  reduce using rule 3 (program)


State 37

   32 statement: vardecl .

    $default  reduce using rule 32 (statement)


State 38

   33 statement: while .

    $default  reduce using rule 33 (statement)


State 39

   34 statement: ifelse .

    $default  reduce using rule 34 (statement)


State 40

   35 statement: return .

    $default  reduce using rule 35 (statement)


State 41

   36 statement: expr . ';'
   48 expr: expr . '=' expr
   49     | expr . TOK_EQ expr
   50     | expr . TOK_NE expr
   51     | expr . TOK_LT expr
   52     | expr . TOK_LE expr
   53     | expr . TOK_GT expr
   54     | expr . TOK_GE expr
   55     | expr . '+' expr
   56     | expr . '-' expr
   57     | expr . '*' expr
   58     | expr . '/' expr
   59     | expr . '%' expr
   73 variable: expr . '[' expr ']'
   74         | expr . '.' TOK_IDENT

    TOK_EQ  shift, and go to state 79
    TOK_NE  shift, and go to state 80
    TOK_LT  shift, and go to state 81
    TOK_LE  shift, and go to state 82
    TOK_GT  shift, and go to state 83
    TOK_GE  shift, and go to state 84
    '='     shift, and go to state 85
    '+'     shift, and go to state 86
    '-'     shift, and go to state 87
    '*'     shift, and go to state 88
    '/'     shift, and go to state 89
    '%'     shift, and go to state 90
    '['     shift, and go to state 91
    '.'     shift, and go to state 92
    ';'     shift, and go to state 93


State 42

   47 expr: allocator .

    $default  reduce using rule 47 (expr)


State 43

   46 expr: call .

    $default  reduce using rule 46 (expr)


State 44

   69 call: arg . ')'
   71 arg: arg . ',' expr

    ')'  shift, and go to state 94
    ','  shift, and go to state 95


State 45

   44 expr: variable .

    $default  reduce using rule 44 (expr)


State 46

   43 expr: constant .

    $default  reduce using rule 43 (expr)


State 47

    4 program: program error '}' .

    $default  reduce using rule 4 (program)


State 48

    5 program: program error ';' .

    $default  reduce using rule 5 (program)


State 49

   39 ifelse: TOK_IF '(' . expr ')' statement
   40       | TOK_IF '(' . expr ')' statement TOK_ELSE statement

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 96
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 50

   38 while: TOK_WHILE '(' . expr ')' statement

    TOK_FALSE      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_NULL       shift, and go to state 15
    TOK_NEW        shift, and go to state 16
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    TOK_ORD        shift, and go to state 21
    TOK_CHR        shift, and go to state 22
    '+'            shift, and go to state 23
    '-'            shift, and go to state 24
    '!'            shift, and go to state 25
    '('            shift, and go to state 26

    expr       go to state 97
    allocator  go to state 42
    call       go to state 43
    arg        go to state 44
    variable   go to state 45
    constant   go to state 46


State 51

   68 call: TOK_IDENT . '(' ')'
   70 arg: TOK_IDENT . '(' expr
   72 variable: TOK_IDENT .

    '('  shift, and go to state 58

    $default  reduce using rule 72 (variable)


State 52

   42 return: TOK_RETURN ';' .

    $default  reduce using rule 42 (return)


State 53
